# ibc-attestor

./: .editorconfig  .gitignore  ARCHITECTURE.md  CLEANUP_SUMMARY.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  rustfmt.toml
.github/workflows/: docker-publish.yml  lint-and-test.yml  release.yml
apps/ibc-attestor/: Cargo.toml  Dockerfile  build.rs  server.dev.toml
apps/ibc-attestor/src/: attestation.rs  attestation_payload.rs  config.rs  error.rs  lib.rs  logging.rs  metrics.rs
apps/ibc-attestor/src/adapter/: cosmos.rs  evm.rs  mod.rs  retry.rs  solana.rs
apps/ibc-attestor/src/rpc/: attestor.rs  health.rs  health_server.rs  interceptor.rs  middleware.rs  mod.rs  server.rs
apps/ibc-attestor/src/signer/: local.rs  mod.rs  remote.rs
docs/: ci.md  deployment-overview.md  deployment.md  health-check.md  ift.md  interop.md  relayer.md  tracing.md
docs/internal-audits/: solana-attestation.md
libs/ethereum/keys/src/: recover.rs  signature.rs
proto/health/: health.proto
proto/signer/: signerservice.proto
